<resources>
    <string name="app_name">Receipts</string>
    <string name="title_activity_camera_detect">CameraDetect</string>
    <string name="camera">Camera</string>
    <string name="detect">Detect</string>
    <string name="snapshot">SnapShot</string>
    <string name="image_for_detection">Image for detection</string>
    <string name="password">Password</string>
    <string name="email_example">YourEmail@gmail.com</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">No Account Yet? Create One.</string>
    <string name="name">Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="match_password">Match Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_out">Sign Out</string>

    <!--
    Firebase Data Base Default keys
    -->
    <string name="fireBase_database_first_name">first_name</string>
    <string name="fireBase_database_last_name">last_name</string>
    <string name="fireBase_database_phone">phone</string>
    <string name="fireBase_database_email">email</string>

    <!--
    String array days
    -->
    <string-array name="days">
        <item>All</item>
        <item>Today</item>
        <item>Weekly</item>
        <item>Biweekly</item>
        <item>Month</item>
    </string-array>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="receipt_image">Receipt Image</string>
    <string name="sample_title">Title</string>
    <string name="sample_date">01/01/2018</string>
    <string name="sample_total">$0.00</string>
    <string name="sample_address">123 S Some Address Ave, Los Angeles California 90057</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="Total">Total</string>
    <string name="example_title">Cafe 47</string>
    <string name="example_date">MM/DD/YYYY</string>
    <string name="example_total">$0.00</string>
    <string name="confirm">Confirm</string>
    <string name="example_address">123 Some Address Ave. Los Angeles CA, 90032</string>
    <string name="title_activity_receipts_maps">Map</string>
    <string name="total_spending">Total Spending : $</string>
</resources>
