<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Auth_Sign_Up">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_firs t_name_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/hint_first_name"
            android:paddingEnd="40dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_last_name_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/hint_last_name"
            android:paddingStart="40dp"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/email_example"
        android:padding="16dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="16dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/password"
        android:padding="16dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="16dp"
        android:text="@string/match_password"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_password_match_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/password"
        android:padding="16dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
        android:onClick="create_New_Account_Handler"
        android:text="@string/create_new_account" />
</LinearLayout>
