<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth_Sign_In"
    android:orientation="vertical"
    android:padding="42dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        android:padding="16dp"
        />
    <EditText
        android:id="@+id/et_email_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_example"
        android:padding="16dp"
        android:textSize="22sp"
        android:fontFamily="sans-serif-condensed"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        android:padding="16dp"
        />
    <EditText
        android:id="@+id/et_password_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="16dp"
        android:textSize="22sp"
        android:fontFamily="sans-serif-condensed"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="sign_In_Handler"
        android:padding="16dp"
        android:id="@+id/bt_login_sign_in"
        />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:padding="16dp"
            android:id="@+id/bt_sign_up"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:onClick="sign_Up_Handler"
            />

</LinearLayout>