<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/graident_background"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/ib_receipt_confirmation_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:onClick="receipt_confirmation_image_handle"
            tools:srcCompat="@tools:sample/backgrounds/scenic[3]" />

        <EditText
            android:id="@+id/et_receipt_confirmation_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/example_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_receipt_confirmation_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/example_address"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_receipt_confirmation_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/example_date"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_receipt_confirmation_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/example_total"
            android:textAlignment="center"

            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_receipt_confirmation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/confirm"
            android:onClick="receipt_confirmation_handle"
            />

    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/pb_receipt_confirmation_progressbar"


        />

</RelativeLayout>